--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 		"run:studio": "remotion studio remotion/index.tsx",
 		"browser": "remotion browser ensure",
 		"upgrade": "remotion upgrade",
-		"lint": "eslint remotion app src __test__ --ext ts,tsx,js,jsx",
+		"lint": "eslint remotion app src __test__",
+		"lint:fix": "eslint remotion app src __test__ --fix",
+		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+		"format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
 		"test": "jest",
 		"build": "next build",
 		"dev": "next dev",
@@ -48,8 +51,10 @@
 		"zod": "3.25.76"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.17.0",
 		"@iconify/react": "^5.0.0",
-		"@remotion/eslint-plugin": "4.0.377",
+		"@next/eslint-plugin-next": "^14.2.35",
+		"@remotion/eslint-config-flat": "4.0.390",
 		"@testing-library/dom": "10.4.1",
 		"@testing-library/jest-dom": "6.9.1",
 		"@testing-library/react": "16.3.0",
@@ -61,24 +66,25 @@
 		"@types/react-dom": "18.3.7",
 		"@types/testing-library__jest-dom": "5.14.9",
 		"@types/web": "0.0.294",
-		"@typescript-eslint/eslint-plugin": "7.18.0",
-		"@typescript-eslint/parser": "7.18.0",
+		"@typescript-eslint/eslint-plugin": "^8.18.0",
+		"@typescript-eslint/parser": "^8.18.0",
 		"autoprefixer": "10.4.22",
 		"debug": "4.4.3",
-		"eslint": "8.57.1",
-		"eslint-config-next": "^14.0.0",
-		"eslint-plugin-import": "2.32.0",
-		"eslint-plugin-simple-import-sort": "12.1.1",
+		"eslint": "^9.17.0",
+		"eslint-config-flat-gitignore": "^2.1.0",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"husky": "9.1.7",
 		"jest-environment-jsdom": "29.7.0",
 		"jest-fetch-mock": "^3.0.3",
 		"lodash": "4.17.21",
 		"postcss": "8.5.6",
 		"postcss-nested": "6.2.0",
-		"prettier": "3.6.2",
-		"pretty-quick": "4.2.2",
+		"prettier": "^3.7.4",
+		"pretty-quick": "^4.2.2",
 		"tailwindcss": "3.4.18",
 		"typescript": "5.9.3",
+		"typescript-eslint": "^8.18.0",
 		"yargs": "17.7.2"
 	},
 	"packageManager": "pnpm@8.15.9"
