--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
 	"singleQuote": true,
 	"bracketSpacing": false,
-	"jsxBracketSameLine": false,
+	"bracketSameLine": false,
 	"useTabs": true,
 	"overrides": [
 		{
