chore(renovate): wait green CI before merge

--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
 		{
 			"matchUpdateTypes": ["minor", "patch"],
 			"automerge": true,
-			"automergeType": "branch"
+			"automergeType": "pr"
 		}
 	]
 }
